syntax = "proto3";

package pb;

import "global.proto";

message EchoParam {
    string text = 1;
}

message EchoResponse {
    bool done =1;
    string text = 2;
}

message CheckUserNameParam {
    string username = 1;
}

message CheckUserNameResponse {
    bool is_available =1;
    string username = 2;
    string show_message = 3;
}

service RPC_Shared {
    rpc Echo (EchoParam) returns (EchoResponse);
    rpc CheckUserName (CheckUserNameParam) returns (CheckUserNameResponse);

}

